<resources>
    <string name="app_name">R2Y2</string>
    <string name="action_settings">Settings</string>
    <string name="Device_Image">Device Image</string>
    <string name="Device_Address">Device Address</string>
    <string name="Device_Bonded">Device Bonded</string>
    <string name="Device_Name">Device Name</string>
    <string name="Device_Type">Device Type</string>
    <string name="Device_Class">Device Class</string>
    <string name="Device_Major_Class">Device Major Class</string>

    <string name="Item_Settings">Item Settings</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

    <string name="Menu_Item_settings">Settings</string>
    <string name="Menu_Item_search">Search</string>
    <string name="Menu_Item_Switch">Switch</string>
    <string name="Menu_Item_devices">Devices</string>
    <string name="Menu_Item_scan_devices">Scan Devices</string>
    <string name="Menu_Item_Enable_Disable_Bluetooth">Enable/Disable Bluetooth</string>
    <string name="bluetoothaction3">Connect</string>
    <string name="bluetoothaction1">Pair device</string>
    <string name="bluetoothaction2">Unpair device</string>
    <string name="bluetooth_device_console_output">Bluetooth Device Console Output</string>
    <string name="pair">Pair</string>
    <string name="unpair">Un-Pair</string>
    <string name="bluetoothaction4">Send message</string>
    <string name="logo">Logo</string>
    <string name="Message_hint">R, G, B, A or N</string>

</resources>
