<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/contentFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchorGravity="end|top"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@+id/contentFragment"
        app:layout_anchorGravity="end|bottom"
        app:srcCompat="@drawable/ic_add" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="90dp"
        android:tooltipText="@string/Menu_Item_settings"
        android:visibility="invisible"
        app:layout_anchor="@+id/contentFragment"
        app:layout_anchorGravity="end|bottom"
        app:srcCompat="@drawable/ic_settings" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="160dp"
        android:tooltipText="@string/Menu_Item_devices"
        android:visibility="invisible"
        app:layout_anchor="@+id/contentFragment"
        app:layout_anchorGravity="end|bottom"
        app:srcCompat="@drawable/ic_devices" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_enable_disable_bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="230dp"
        android:tooltipText="@string/Menu_Item_Enable_Disable_Bluetooth"
        android:visibility="invisible"
        app:layout_anchor="@+id/contentFragment"
        app:layout_anchorGravity="end|bottom"
        app:srcCompat="@drawable/ic_bluetooth" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_discover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="300dp"
        android:tooltipText="@string/Menu_Item_scan_devices"
        android:visibility="invisible"
        app:layout_anchor="@+id/contentFragment"
        app:layout_anchorGravity="end|bottom"
        app:srcCompat="@drawable/ic_bluetooth_searching" />
</android.support.design.widget.CoordinatorLayout>